client 连接池优化 自动删除不可用的连接

--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -3,15 +3,16 @@
   <configSections>
     <section name="thriftClient" type="Thrift.Client.Config.ThriftConfigSection,Thrift.Client"/>
   </configSections>
-  
+
   <!--thrift client config-->
   <thriftClient>
     <services>
       <service name="GameThriftService"
                typeName="ThriftTest.GameThriftService+Client,GameThriftService"
-               minConnectionsNum="5"
+               minConnectionsNum="100"
                maxConnectionsNum="100"
                incrementalConnections="5"
+               maxConnectionsIdle="50"
                timeout="10000"
                host="127.0.0.1:9021"
                poolTimeout="5000"
