--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -7,7 +7,7 @@
     <thriftServer>
     <services>
       <service name="GameService" handlerType="Thrift.Service.GameServiceHandler,Thrift.Service.dll"
-               
+               weight="2"
                processType="ThriftTest.GameThriftService+Processor,GameThriftService" ifaceType="ThriftTest.GameThriftService+Iface,GameThriftService" minThreadPoolThreads="1000" maxThreadPoolThreads="1000" port="9021" znodeParent="/ThriftServer/GameService" >
       </service>
 
