优化连接池

--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -10,14 +10,14 @@
       <service name="GameThriftService"
                typeName="ThriftTest.GameThriftService+Client,GameThriftService"
                minConnectionsNum="10"
-               maxConnectionsNum="100"
+               maxConnectionsNum="20"
                incrementalConnections="5"
-               maxConnectionsIdle="10"
+               maxConnectionsIdle="20"
                timeout="100000"
                host="127.0.0.1:9021"
-               poolTimeout="50000"
+               poolTimeout="500000"
                >
-        <ZookeeperConfig       zhost="127.0.0.1:2181"   sessionTimeout="50000"        znodeParent="/ThriftServer/GameService" />
+        <ZookeeperConfig       host="127.0.0.1:2181"   sessionTimeout="50000"        nodeParent="/ThriftServer/GameService" />
       </service>
     </services>
   </thriftClient>
