--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -8,7 +8,9 @@
     <services>
       <service name="GameService" handlerType="Thrift.Service.GameServiceHandler,Thrift.Service.dll"
                weight="2"
-               processType="ThriftTest.GameThriftService+Processor,GameThriftService" ifaceType="ThriftTest.GameThriftService+Iface,GameThriftService" minThreadPoolThreads="1000" maxThreadPoolThreads="1000" port="9021" znodeParent="/ThriftServer/GameService" >
+               processType="ThriftTest.GameThriftService+Processor,GameThriftService" ifaceType="ThriftTest.GameThriftService+Iface,GameThriftService" minThreadPoolThreads="1000" maxThreadPoolThreads="1000" port="9021" >
+
+        <ZookeeperConfig       host="127.0.0.1:2181"   sessionTimeout="50000"      digest="TestUser:123456"  nodeParent="/ThriftServer/GameService" />
       </service>
 
 
