--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -10,7 +10,7 @@
                weight="2"
                processType="ThriftTest.GameThriftService+Processor,GameThriftService" ifaceType="ThriftTest.GameThriftService+Iface,GameThriftService" minThreadPoolThreads="1000" maxThreadPoolThreads="1000" port="9021" >
 
-        <ZookeeperConfig       host="127.0.0.1:2181"   sessionTimeout="50000"      digest="TestUser:123456"  nodeParent="/ThriftServer/GameService" />
+        <ZookeeperConfig        host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"  sessionTimeout="5000"     nodeParent="/ThriftServer/GameService" />
       </service>
 
 
