--- a/Thrift.ServiceWin/App.config
+++ b/Thrift.ServiceWin/App.config
@@ -7,6 +7,7 @@
     <!--thrift服务Ip限制配置文件路径-->
     <add key="IpLimitPath" value="Config/IpLimit.config"/>
 
+      <add key="log4netConfigPath" value="/Config/log4net.config" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
