--- a/Thrift.ServiceWin/App.config
+++ b/Thrift.ServiceWin/App.config
@@ -1,13 +1,16 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
-    <appSettings>
+  <appSettings>
 
+    <!--thrift服务配置-->
     <add key="ThriftServerConfigPath" value="Config/ThriftServer.config"/>
-    
+    <!--注册zk的情况下， thrift服务延时关闭时间 默认20000 单位:豪秒-->
+    <add key="ThriftServerStopDelayedTime" value="1000"/>
+
     <!--thrift服务Ip限制配置文件路径-->
     <add key="IpLimitPath" value="Config/IpLimit.config"/>
 
-      <add key="log4netConfigPath" value="/Config/log4net.config" />
+    <add key="log4netConfigPath" value="/Config/log4net.config" />
   </appSettings>
   <startup>
     <supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/>
