--- a/Thrift.IDLHelp/Thrift.IDLHelp.csproj
+++ b/Thrift.IDLHelp/Thrift.IDLHelp.csproj
@@ -36,6 +36,12 @@
   <PropertyGroup>
     <StartupObject />
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>true</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>ThriftKey.snk</AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -61,6 +67,7 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
+    <None Include="ThriftKey.snk" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\thrift.exe" />
