--- a/Thrift.ServiceWin/Thrift.ServiceWin.csproj
+++ b/Thrift.ServiceWin/Thrift.ServiceWin.csproj
@@ -33,6 +33,13 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
+  <PropertyGroup>
+    <SignAssembly>false</SignAssembly>
+  </PropertyGroup>
+  <PropertyGroup>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
+  </PropertyGroup>
   <ItemGroup>
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
@@ -47,6 +54,10 @@
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
+    <Reference Include="Thrift, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
+      <HintPath>..\packages\ApacheThrift.0.9.3\lib\Thrift.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="ZooKeeperNet, Version=3.4.6.1, Culture=neutral, PublicKeyToken=fefd2c046da35b56, processorArchitecture=MSIL">
       <HintPath>..\packages\ZooKeeper.Net.3.4.6.2\lib\net40\ZooKeeperNet.dll</HintPath>
       <Private>True</Private>
@@ -70,14 +81,14 @@
     </None>
     <None Include="Config\ThriftServer.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+      <SubType>Designer</SubType>
     </None>
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
-    <ProjectReference Include="..\Thrift.Test\Thrift.Test.csproj">
-      <Project>{80168ab7-ecb0-4db6-aa02-6e712688ca12}</Project>
-      <Name>Thrift.Test</Name>
-    </ProjectReference>
+    <Folder Include="Logs\" />
+  </ItemGroup>
+  <ItemGroup>
     <ProjectReference Include="..\Thrift.IDLHelp\Thrift.IDLHelp.csproj">
       <Project>{19c070ee-5e55-41a4-bff2-b08f1b87257a}</Project>
       <Name>Thrift.IDLHelp</Name>
@@ -90,9 +101,10 @@
       <Project>{64ea89b6-a3d5-4dd6-aba1-30514273173a}</Project>
       <Name>Thrift.Service</Name>
     </ProjectReference>
-  </ItemGroup>
-  <ItemGroup>
-    <Folder Include="Logs\" />
+    <ProjectReference Include="..\Thrift.Test\Thrift.Test.csproj">
+      <Project>{80168ab7-ecb0-4db6-aa02-6e712688ca12}</Project>
+      <Name>Thrift.Test</Name>
+    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
