--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -8,7 +8,8 @@
   <thriftClient>
     <services>
       <service name="GameThriftService"
-               typeName="ThriftTest.GameThriftService+Client,GameThriftService"
+               spaceName="ThriftTest"
+                className="GameThriftService"
                minConnectionsNum="2"
                maxConnectionsNum="5"
                incrementalConnections="1"
