--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -8,7 +8,9 @@
     <services>
       <service name="GameService" handlerType="Thrift.Service.GameServiceHandler,Thrift.Service.dll"
                weight="2"
-               processType="ThriftTest.GameThriftService+Processor,GameThriftService" ifaceType="ThriftTest.GameThriftService+Iface,GameThriftService" minThreadPoolThreads="1000" maxThreadPoolThreads="1000" port="9021" >
+               spaceName="ThriftTest"
+               className="GameThriftService"
+               minThreadPoolThreads="1000" maxThreadPoolThreads="1000" port="9021" >
 
         <ZookeeperConfig        host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"  sessionTimeout="5000"     nodeParent="/ThriftServer/GameService" />
       </service>
