--- a/Thrift.Service/Thrift.Service.csproj
+++ b/Thrift.Service/Thrift.Service.csproj
@@ -64,6 +64,10 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\Thrift.IDLHelp\Thrift.IDLHelp.csproj">
+      <Project>{19c070ee-5e55-41a4-bff2-b08f1b87257a}</Project>
+      <Name>Thrift.IDLHelp</Name>
+    </ProjectReference>
     <ProjectReference Include="..\Thrift.Test\Thrift.Test.csproj">
       <Project>{80168ab7-ecb0-4db6-aa02-6e712688ca12}</Project>
       <Name>Thrift.Test</Name>
