--- a/Thrift.ServiceWin/Thrift.ServiceWin.csproj
+++ b/Thrift.ServiceWin/Thrift.ServiceWin.csproj
@@ -41,6 +41,9 @@
     </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
+    <Reference Include="GameThriftService">
+      <HintPath>..\Dependency\GameThriftService.dll</HintPath>
+    </Reference>
     <Reference Include="log4net, Version=1.2.10.0, Culture=neutral, PublicKeyToken=1b44e1d426115821, processorArchitecture=MSIL">
       <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
       <Private>True</Private>
