1.增加了日志开关。 2.修复服务端返回null触发异常的bug.

--- a/Thrift.ServiceWin/Thrift.ServiceWin.csproj
+++ b/Thrift.ServiceWin/Thrift.ServiceWin.csproj
@@ -75,7 +75,7 @@
     <None Include="App.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
-    <None Include="Config\IpLimit.config">
+    <None Include="Config\ThriftIpLimit.config">
       <SubType>Designer</SubType>
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
