--- a/Thrift.ClientWin/App.config
+++ b/Thrift.ClientWin/App.config
@@ -4,6 +4,8 @@
   <appSettings>
 
     <add key="ThriftClientConfigPath" value="Config/ThriftClient.config"/>
+    <!--thrift启用日志 1启用 0不启用 默认启用-->
+    <add key="ThriftLog" value="1"/>
     
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
