--- a/Thrift.ServiceWin/App.config
+++ b/Thrift.ServiceWin/App.config
@@ -6,9 +6,10 @@
     <add key="ThriftServerConfigPath" value="Config/ThriftServer.config"/>
     <!--注册zk的情况下， thrift服务延时关闭时间 默认20000 单位:豪秒-->
     <add key="ThriftServerStopDelayedTime" value="1000"/>
-
     <!--thrift服务Ip限制配置文件路径-->
-    <add key="IpLimitPath" value="Config/IpLimit.config"/>
+    <add key="ThriftIpLimitPath" value="Config/ThriftIpLimit.config"/>
+    <!--thrift启用日志 1启用 0不启用 默认启用-->
+    <add key="ThriftLog" value="0"/>
 
     <add key="log4netConfigPath" value="/Config/log4net.config" />
   </appSettings>
