--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -6,10 +6,10 @@
 
     <thriftServer>
     <services>
-      <service name="GameService" handlerType="Thrift.Service.GameServiceHandler,Thrift.Service.dll"
+      <service name="ThriftTestThrift" handlerType="Thrift.Service.GameServiceHandler,Thrift.Service.dll"
                weight="2"
-               spaceName="ThriftTest"
-               className="GameThriftService"
+               spaceName="Thrift.Test.Thrift"
+               className="ThriftTestThrift"
                minThreadPoolThreads="1000" maxThreadPoolThreads="1000" port="9021" >
 
         <ZookeeperConfig        host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"  sessionTimeout="5000"     nodeParent="/ThriftServer/GameService" />
