--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -7,9 +7,9 @@
   <!--thrift client config-->
   <thriftClient>
     <services>
-      <service name="GameThriftService"
-               spaceName="ThriftTest"
-                className="GameThriftService"
+      <service name="ThriftTestThrift"
+               spaceName="Thrift.Test.Thrift"
+                className="ThriftTestThrift"
                minConnectionsNum="2"
                maxConnectionsNum="5"
                incrementalConnections="1"
@@ -18,7 +18,7 @@
                host="127.0.0.1:9021"
                poolTimeout="5000"
                >
-        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/GameService" />
+        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />
       </service>
 
     </services>
