--- a/Thrift.ClientWin/Thrift.ClientWin.csproj
+++ b/Thrift.ClientWin/Thrift.ClientWin.csproj
@@ -34,9 +34,6 @@
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="GameThriftService">
-      <HintPath>..\Dependency\GameThriftService.dll</HintPath>
-    </Reference>
     <Reference Include="Newtonsoft.Json, Version=7.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\Dependency\Newtonsoft.Json.dll</HintPath>
@@ -54,6 +51,9 @@
     <Reference Include="Thrift, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
       <HintPath>..\packages\ApacheThrift.0.9.3\lib\Thrift.dll</HintPath>
       <Private>True</Private>
+    </Reference>
+    <Reference Include="Thrift.Test.Thrift">
+      <HintPath>..\Dependency\Thrift.Test.Thrift.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
