--- a/Thrift.ClientWin/Thrift.ClientWin.csproj
+++ b/Thrift.ClientWin/Thrift.ClientWin.csproj
@@ -61,8 +61,14 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
+    <None Include="123.pfx">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
+    </None>
     <None Include="App.config">
       <SubType>Designer</SubType>
+    </None>
+    <None Include="client.p12">
+      <CopyToOutputDirectory>Always</CopyToOutputDirectory>
     </None>
     <None Include="Config\ThriftClient.config">
       <CopyToOutputDirectory>Always</CopyToOutputDirectory>
