--- a/Thrift.Server/Thrift.Server.csproj
+++ b/Thrift.Server/Thrift.Server.csproj
@@ -71,6 +71,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="Common\MyTServerEventHandler.cs" />
     <Compile Include="Common\BaseProcessor.cs" />
     <Compile Include="Common\IpLimit.cs" />
     <Compile Include="Common\ZookeeperHelp.cs" />
