--- a/Thrift.IDLHelp/Thrift.IDLHelp.csproj
+++ b/Thrift.IDLHelp/Thrift.IDLHelp.csproj
@@ -60,6 +60,7 @@
     <Compile Include="Models\FileModel.cs" />
     <Compile Include="Help.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util\Csc.cs" />
     <Compile Include="Util\ThriftCmd.cs" />
     <Compile Include="Util\Formatter.cs" />
     <Compile Include="Util\ThriftDLL.cs" />
@@ -77,6 +78,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Remark.txt" />
+    <EmbeddedResource Include="Resources\csc.exe" />
+    <EmbeddedResource Include="Resources\cscui.dll" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
