--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -11,14 +11,14 @@
                spaceName="Thrift.Test.Thrift"
                 className="ThriftTestThrift"
                minConnectionsNum="1"
-               maxConnectionsNum="5000"
+               maxConnectionsNum="100"
                incrementalConnections="1"
-               maxConnectionsIdle="50"
-               timeout="20000"
+               maxConnectionsIdle="100"
+               timeout="5000"
                host="192.168.7.171:9021"
                poolTimeout="5000"
                >
-        <!--<ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />-->
+        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />
         <!--<ZookeeperConfig        host="127.0.0.1:2181"  sessionTimeout="5000"     nodeParent="/ThriftServer/ThriftTestThrift" />-->
       </service>
 
