--- a/Thrift.Client/Thrift.Client.csproj
+++ b/Thrift.Client/Thrift.Client.csproj
@@ -70,6 +70,8 @@
     <Compile Include="Common\ZookeeperWatcherHelp.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ThriftClient.cs" />
+    <Compile Include="ThriftClientNoPool.cs" />
+    <Compile Include="IThriftClientPool.cs" />
     <Compile Include="ThriftClient_Simple.cs" />
     <Compile Include="ThriftClientConfig.cs" />
     <Compile Include="ThriftClientFactory.cs" />
