--- a/Thrift.Server/Thrift.Server.csproj
+++ b/Thrift.Server/Thrift.Server.csproj
@@ -83,6 +83,8 @@
     <Compile Include="ConfigCenter\IpLimitConfig.cs" />
     <Compile Include="ConfigCenter\RegeditConfig.cs" />
     <Compile Include="Config\ZookeeperConfig.cs" />
+    <Compile Include="RealProxy.cs" />
+    <Compile Include="ServerProxy.cs" />
     <Compile Include="Server.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConfigCenter\Task.cs" />
