--- a/Thrift.Server/Thrift.Server.csproj
+++ b/Thrift.Server/Thrift.Server.csproj
@@ -84,8 +84,8 @@
     <Compile Include="ConfigCenter\RegeditConfig.cs" />
     <Compile Include="Config\ZookeeperConfig.cs" />
     <Compile Include="RealProxy.cs" />
-    <Compile Include="ServerProxy.cs" />
     <Compile Include="Server.cs" />
+    <Compile Include="Server_0.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ConfigCenter\Task.cs" />
     <Compile Include="ThriftLog.cs" />
