--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -10,16 +10,15 @@
       <service name="ThriftTestThrift"
                spaceName="Thrift.Test.Thrift"
                 className="ThriftTestThrift"
-               minConnectionsNum="2"
+               minConnectionsNum="5"
                maxConnectionsNum="100"
-               incrementalConnections="2"
+               incrementalConnections="1"
                maxConnectionsIdle="100"
                timeout="5000"
-               host="192.168.7.171:9021"
+               host="192.168.7.215:9022,192.168.7.215:9024,192.168.7.215:9021"
                poolTimeout="5000"
                >
-        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />
-        <!--<ZookeeperConfig        host="127.0.0.1:2181"  sessionTimeout="5000"     nodeParent="/ThriftServer/ThriftTestThrift" />-->
+        <!--<ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />-->
       </service>
 
     </services>
