--- a/Thrift.ClientWin/App.config
+++ b/Thrift.ClientWin/App.config
@@ -2,10 +2,14 @@
 <configuration>
 
   <appSettings>
-
+    <add key="log4netConfigPath" value="/Config/log4net.config" />
     <add key="ThriftClientConfigPath" value="Config/ThriftClient.config"/>
     <!--thrift启用日志 1启用 0不启用 默认启用-->
     <add key="ThriftLog" value="1"/>
-    
+
+    <add key="test_console" value="1"/>
+    <add key="test_count" value="1000000"/>
+    <add key="test_th" value="1"/>
+    <add key="test_sleep" value="1000"/>
   </appSettings>
 <startup><supportedRuntime version="v4.0" sku=".NETFramework,Version=v4.5"/></startup></configuration>
