--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -10,7 +10,7 @@
       <service name="ThriftTestThrift"
                spaceName="Thrift.Test.Thrift"
                 className="ThriftTestThrift"
-               minConnectionsNum="5"
+               minConnectionsNum="10"
                maxConnectionsNum="100"
                incrementalConnections="1"
                maxConnectionsIdle="100"
@@ -18,7 +18,7 @@
                host="192.168.7.215:9022,192.168.7.215:9024,192.168.7.215:9021"
                poolTimeout="5000"
                >
-        <!--<ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />-->
+        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />
       </service>
 
     </services>
