--- a/.gitignore
+++ b/.gitignore
@@ -14,3 +14,6 @@ Thrift.Client/obj/
 Thrift.Client/bin/
 Thrift.Test/bin/
 .vs/
+ThriftTest.Test/bin/
+ThriftTest.Test/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
+ThriftTest.Test/obj/
