--- a/Thrift.Test/Thrift.Test.csproj
+++ b/Thrift.Test/Thrift.Test.csproj
@@ -49,6 +49,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Entity\GameInfo.cs" />
+    <Compile Include="Entity\GameInfoThrift.cs" />
+    <Compile Include="Entity\ThriftResultBase.cs" />
+    <Compile Include="GameService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="IGameService.cs" />
   </ItemGroup>
