--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -15,10 +15,12 @@
                incrementalConnections="1"
                maxConnectionsIdle="100"
                timeout="5000"
-               host="192.168.7.215:9022,192.168.7.215:9024,192.168.7.215:9021"
+               host=""
                poolTimeout="5000"
                >
-        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />
+        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />
+
+        <!--<ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />-->
       </service>
 
     </services>
