--- a/.gitignore
+++ b/.gitignore
@@ -17,3 +17,6 @@ Thrift.Test/bin/
 ThriftTest.Test/bin/
 ThriftTest.Test/obj/Debug/TemporaryGeneratedFile_E7A71F73-0F8D-4B9B-B56E-8E70B10BC5D3.cs
 ThriftTest.Test/obj/
+ConsoleApplication3/
+ConsoleApplication2/
+ConsoleApplication1/
