--- a/Thrift.ClientWin/packages.config
+++ b/Thrift.ClientWin/packages.config
@@ -2,4 +2,5 @@
 <packages>
   <package id="ApacheThrift" version="0.9.3" targetFramework="net452" />
   <package id="log4net" version="1.2.10" targetFramework="net45" />
+  <package id="ZooKeeperNetEx" version="3.4.9.4" targetFramework="net45" />
 </packages>
