--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -18,7 +18,7 @@
                host=""
                poolTimeout="5000"
                >
-        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />
+        <ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182"     nodeParent="/ThriftServer/ThriftTestThrift" />
 
         <!--<ZookeeperConfig   connectInterval="1000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"   sessionTimeout="5000"    nodeParent="/ThriftServer/ThriftTestThrift" />-->
       </service>
