--- a/Thrift.ClientWin/Thrift.ClientWin.csproj
+++ b/Thrift.ClientWin/Thrift.ClientWin.csproj
@@ -55,9 +55,12 @@
     <Reference Include="Thrift.Test.Thrift">
       <HintPath>..\Dependency\Thrift.Test.Thrift.dll</HintPath>
     </Reference>
+    <Reference Include="ZooKeeperNetEx, Version=3.4.9.4, Culture=neutral, PublicKeyToken=42cd15de36f9b993, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZooKeeperNetEx.3.4.9.4\lib\net45\ZooKeeperNetEx.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="HttpClientHelper.cs" />
     <Compile Include="LogHelper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
