--- a/Thrift.Server/Thrift.Server.csproj
+++ b/Thrift.Server/Thrift.Server.csproj
@@ -48,9 +48,6 @@
       <HintPath>..\packages\log4net.1.2.10\lib\2.0\log4net.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>..\Dependency\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
@@ -65,8 +62,8 @@
       <HintPath>..\packages\ApacheThrift.0.9.3\lib\Thrift.dll</HintPath>
       <Private>True</Private>
     </Reference>
-    <Reference Include="ZooKeeperNet, Version=3.4.6.1, Culture=neutral, PublicKeyToken=fefd2c046da35b56, processorArchitecture=MSIL">
-      <HintPath>..\packages\ZooKeeper.Net.3.4.6.2\lib\net40\ZooKeeperNet.dll</HintPath>
+    <Reference Include="ZooKeeperNetEx, Version=3.4.9.4, Culture=neutral, PublicKeyToken=42cd15de36f9b993, processorArchitecture=MSIL">
+      <HintPath>..\packages\ZooKeeperNetEx.3.4.9.4\lib\net45\ZooKeeperNetEx.dll</HintPath>
       <Private>True</Private>
     </Reference>
   </ItemGroup>
@@ -74,20 +71,15 @@
     <Compile Include="Common\ServerEventHandler.cs" />
     <Compile Include="Common\BaseProcessor.cs" />
     <Compile Include="Common\IpLimit.cs" />
-    <Compile Include="Common\ZookeeperHelp.cs" />
-    <Compile Include="Common\ZookeeperWatcherHelp.cs" />
     <Compile Include="Config\Service.cs" />
     <Compile Include="Config\ServiceCollection.cs" />
     <Compile Include="Config\ThriftConfigSection.cs" />
     <Compile Include="ConfigCenter\ConfigCenter.cs" />
-    <Compile Include="ConfigCenter\IpLimitConfig.cs" />
     <Compile Include="ConfigCenter\RegeditConfig.cs" />
     <Compile Include="Config\ZookeeperConfig.cs" />
     <Compile Include="RealProxy.cs" />
     <Compile Include="Server.cs" />
-    <Compile Include="Server_0.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ConfigCenter\Task.cs" />
     <Compile Include="ThriftLog.cs" />
   </ItemGroup>
   <ItemGroup>
