--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -6,7 +6,7 @@
 
     <thriftServer>
     <services>
-      <service name="ThriftTestThrift" handlerType="Thrift.Service.GameServiceHandler,Thrift.Service.dll"
+      <service name="ThriftTestThrift" handlerType="Thrift.Service.TestServiceHandler,Thrift.Service.dll"
                weight="2"
                spaceName="Thrift.Test.Thrift"
                className="ThriftTestThrift"
