--- a/Thrift.Service/Thrift.Service.csproj
+++ b/Thrift.Service/Thrift.Service.csproj
@@ -51,7 +51,7 @@
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="GameServiceHandler.cs" />
+    <Compile Include="TestServiceHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
   <ItemGroup>
