--- a/Thrift.IDLHelp/Thrift.IDLHelp.csproj
+++ b/Thrift.IDLHelp/Thrift.IDLHelp.csproj
@@ -40,7 +40,8 @@
     <SignAssembly>true</SignAssembly>
   </PropertyGroup>
   <PropertyGroup>
-    <AssemblyOriginatorKeyFile>ThriftKey.snk</AssemblyOriginatorKeyFile>
+    <AssemblyOriginatorKeyFile>
+    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
@@ -71,7 +72,6 @@
   <ItemGroup>
     <None Include="App.config" />
     <EmbeddedResource Include="Resources\AssemblyInfo.ini" />
-    <None Include="ThriftKey.snk" />
   </ItemGroup>
   <ItemGroup>
     <EmbeddedResource Include="Resources\thrift.exe" />
@@ -80,7 +80,6 @@
     <EmbeddedResource Include="Resources\Thrift.dll" />
   </ItemGroup>
   <ItemGroup>
-    <Content Include="Remark.txt" />
     <EmbeddedResource Include="Resources\csc.exe" />
     <EmbeddedResource Include="Resources\cscui.dll" />
   </ItemGroup>
