--- a/Thrift.ClientWin/packages.config
+++ b/Thrift.ClientWin/packages.config
@@ -2,5 +2,6 @@
 <packages>
   <package id="ApacheThrift" version="0.9.3" targetFramework="net452" />
   <package id="log4net" version="2.0.8" targetFramework="net45" />
+  <package id="Newtonsoft.Json" version="10.0.3" targetFramework="net45" />
   <package id="ZooKeeperNetEx" version="3.4.9.4" targetFramework="net45" />
 </packages>
