--- a/Thrift.ServiceWin/App.config
+++ b/Thrift.ServiceWin/App.config
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <configuration>
   <appSettings>
-
     <!--thrift服务配置-->
-    <add key="ThriftServerConfigPath2" value="Config/ThriftServer.config"/>
-    <!--注册zk的情况下， thrift服务延时关闭时间 默认20000 单位:豪秒-->
-    <add key="ThriftServerStopDelayedTime" value="10000"/>
+    <add key="ThriftServerConfigPath" value="Config/ThriftServer.config"/>
+    
     <!--thrift服务Ip限制配置文件路径-->
     <add key="ThriftIpLimitPath" value="Config/ThriftIpLimit.config"/>
-
+    
+    <!--注册zk的情况下， thrift服务延时关闭时间 默认20000 单位:豪秒-->
+    <add key="ThriftServerStopDelayedTime" value="10000"/>
+    
     <add key="log4netConfigPath" value="/Config/log4net.config" />
   </appSettings>
   <startup>
