--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -4,26 +4,26 @@
     <section name="thriftClient" type="Thrift.Client.Config.ThriftConfigSection,Thrift.Client"/>
   </configSections>
 
-  <!--thrift client config-->
   <thriftClient>
     <services>
-      <service name="ThriftTestThrift"
-               spaceName="Thrift.Test.Thrift"
-                className="ThriftTestThrift"
-               minConnectionsNum="10"
-               maxConnectionsNum="100"
-               incrementalConnections="1"
-               maxConnectionsIdle="100"
-               timeout="5000"
-               host=""
-               poolTimeout="5000"
-               >
-        <ZookeeperConfig   connectInterval="10000"   host="192.168.1.181:2182"     nodeParent="/ThriftServer/ThriftTestThrift" />
-
-        <!--<ZookeeperConfig   connectInterval="10000"   host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"     nodeParent="/ThriftServer/ThriftTestThrift" />-->
+      <service name="demo1"
+         host="127.0.0.1:9001,127.0.0.1:9002"
+         poolTimeout="10000"
+         timeout="10000"
+         minConnectionsNum="5"
+         maxConnectionsNum="100"
+         incrementalConnections="5"
+         maxConnectionsIdle="20">
+        <ZookeeperConfig
+          host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"
+          nodeParent="/ThriftServer/ThriftTestThrift" />
       </service>
 
+      <service name="ThriftTestThrift">
+        <ZookeeperConfig
+          host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"
+          nodeParent="/ThriftServer/ThriftTestThrift" />
+      </service>
     </services>
   </thriftClient>
-  <!--thrift client config end-->
 </configuration>
