--- a/Thrift.Service/Thrift.Service.csproj
+++ b/Thrift.Service/Thrift.Service.csproj
@@ -21,6 +21,7 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <DebugType>pdbonly</DebugType>
@@ -29,6 +30,7 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
+    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup>
     <SignAssembly>false</SignAssembly>
@@ -44,7 +46,6 @@
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
-    <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
     <Reference Include="Thrift.Test.Thrift">
       <HintPath>..\Dependency\Thrift.Test.Thrift.dll</HintPath>
@@ -53,20 +54,6 @@
   <ItemGroup>
     <Compile Include="TestServiceHandler.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <ProjectReference Include="..\Thrift.IDLHelp\Thrift.IDLHelp.csproj">
-      <Project>{19c070ee-5e55-41a4-bff2-b08f1b87257a}</Project>
-      <Name>Thrift.IDLHelp</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Thrift.Server\Thrift.Server.csproj">
-      <Project>{7614E3BD-4846-456E-B8BC-B9661F5E6553}</Project>
-      <Name>Thrift.Server</Name>
-    </ProjectReference>
-    <ProjectReference Include="..\Thrift.Test\Thrift.Test.csproj">
-      <Project>{80168ab7-ecb0-4db6-aa02-6e712688ca12}</Project>
-      <Name>Thrift.Test</Name>
-    </ProjectReference>
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
