--- a/Thrift.ServiceWin/Config/ThriftIpLimit.config
+++ b/Thrift.ServiceWin/Config/ThriftIpLimit.config
@@ -1,7 +1,9 @@
 ﻿<?xml version="1.0" encoding="utf-8" ?>
 <configuration>
-  <!--thrift服务Ip 白名单 key="IpWhite" value="127.0.0.1,192.168.7.171,192.168.0.0-192.168.255.255"-->
   <appSettings>
-   <add key="IpWhite" value="0.0.0.1-255.255.255.255" />
+    <!--Ip白名单，单个Ip，Ip段-->
+    <add key="IpWhite" value="127.0.0.1
+         ,10.0.0.0-10.255.255.255,
+         192.168.0.0-192.168.255.255" />
   </appSettings>
 </configuration>
