--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -3,21 +3,34 @@
   <configSections>
     <section name="thriftServer" type="Thrift.Server.Config.ThriftConfigSection,Thrift.Server"/>
   </configSections>
-
     <thriftServer>
     <services>
-      <service name="ThriftTestThrift" handlerType="Thrift.Service.TestServiceHandler,Thrift.Service.dll"
-               weight="2"
+      <!--<service name="ThriftTestThrift" 
+               handlerType="Thrift.Service.TestServiceHandler,Thrift.Service.dll"
                spaceName="Thrift.Test.Thrift"
-               className="ThriftTestThrift"
-               minThreadPoolThreads="500" maxThreadPoolThreads="500" port="9021" >
+               className="ThriftTestThrift" 
+               minThreadPoolThreads="100"
+               maxThreadPoolThreads="1000"
+               weight="2"
+               clientTimeout="0"
+               host="127.0.0.1"
+               port="9021" >
 
-        <ZookeeperConfig        host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"  sessionTimeout="10000"     nodeParent="/ThriftServer/ThriftTestThrift" />
-        <!--<ZookeeperConfig        host="127.0.0.1:2181"  sessionTimeout="5000"     nodeParent="/ThriftServer/ThriftTestThrift" />-->
+        <ZookeeperConfig 
+          host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"    
+          nodeParent="/ThriftServer/ThriftTestThrift" />
+      </service>-->
+
+      <service name="ThriftTestThrift"
+         handlerType="Thrift.Service.TestServiceHandler,Thrift.Service.dll"
+         spaceName="Thrift.Test.Thrift"
+         className="ThriftTestThrift"
+         port="9021" >
+
+        <ZookeeperConfig
+          host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"
+          nodeParent="/ThriftServer/ThriftTestThrift" />
       </service>
-
-    </services>
-
+ </services>
   </thriftServer>
-  <!--thrift server config end-->
 </configuration>
