--- a/.gitignore
+++ b/.gitignore
@@ -20,3 +20,5 @@ ThriftTest.Test/obj/
 ConsoleApplication3/
 ConsoleApplication2/
 ConsoleApplication1/
+Thrift.TestTimer/bin/
+Thrift.TestTimer/obj/
