--- a/Thrift.ClientWin/Config/ThriftClient.config
+++ b/Thrift.ClientWin/Config/ThriftClient.config
@@ -7,6 +7,7 @@
   <thriftClient>
     <services>
       <service name="demo1"
+         isMult="true"
          host="127.0.0.1:9001,127.0.0.1:9002"
          poolTimeout="10000"
          timeout="10000"
@@ -19,7 +20,7 @@
           nodeParent="/ThriftServer/ThriftTestThrift" />
       </service>
 
-      <service name="ThriftTestThrift">
+      <service name="ThriftTestThrift" >
         <ZookeeperConfig
           host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"
           nodeParent="/ThriftServer/ThriftTestThrift" />
