--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -3,7 +3,7 @@
   <configSections>
     <section name="thriftServer" type="Thrift.Server.Config.ThriftConfigSection,Thrift.Server"/>
   </configSections>
-    <thriftServer>
+  <thriftServer>
     <services>
       <!--<service name="ThriftTestThrift" 
                handlerType="Thrift.Service.TestServiceHandler,Thrift.Service.dll"
@@ -25,12 +25,14 @@
          handlerType="Thrift.Service.TestServiceHandler,Thrift.Service.dll"
          spaceName="Thrift.Test.Thrift"
          className="ThriftTestThrift"
+         thriftAssembly="Thrift.Test.Thrift"
+         thriftImplAssembly="Thrift.Service"
          port="9021" >
 
         <ZookeeperConfig
           host="192.168.1.181:2182,192.168.1.182:2182,192.168.1.183:2182"
           nodeParent="/ThriftServer/ThriftTestThrift" />
       </service>
- </services>
+    </services>
   </thriftServer>
 </configuration>
