--- a/Thrift.TestTimer/Thrift.TestTimer.csproj
+++ b/Thrift.TestTimer/Thrift.TestTimer.csproj
@@ -4,15 +4,13 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Debug</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{7614E3BD-4846-456E-B8BC-B9661F5E6553}</ProjectGuid>
-    <OutputType>Library</OutputType>
+    <ProjectGuid>{05AE005F-5412-4561-BC7F-4E051B8BB7CF}</ProjectGuid>
+    <OutputType>Exe</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
-    <RootNamespace>Thrift.Server</RootNamespace>
-    <AssemblyName>Thrift.Server</AssemblyName>
+    <RootNamespace>Thrift.TestTimer</RootNamespace>
+    <AssemblyName>Thrift.TestTimer</AssemblyName>
     <TargetFrameworkVersion>v4.5</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
-    <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
-    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -23,7 +21,6 @@
     <DefineConstants>DEBUG;TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Release|AnyCPU' ">
     <PlatformTarget>AnyCPU</PlatformTarget>
@@ -33,56 +30,27 @@
     <DefineConstants>TRACE</DefineConstants>
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
-    <Prefer32Bit>false</Prefer32Bit>
-  </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
-  <PropertyGroup>
-    <SignAssembly>false</SignAssembly>
-  </PropertyGroup>
-  <PropertyGroup>
-    <AssemblyOriginatorKeyFile>
-    </AssemblyOriginatorKeyFile>
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
-    <Reference Include="System.configuration" />
     <Reference Include="System.Core" />
-    <Reference Include="System.Web" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Data" />
     <Reference Include="System.Net.Http" />
     <Reference Include="System.Xml" />
-    <Reference Include="Thrift, Version=0.9.3.0, Culture=neutral, processorArchitecture=MSIL">
-      <HintPath>..\packages\ApacheThrift.0.9.3\lib\Thrift.dll</HintPath>
-      <Private>True</Private>
-    </Reference>
-    <Reference Include="ZooKeeperNetEx, Version=3.4.9.4, Culture=neutral, PublicKeyToken=42cd15de36f9b993, processorArchitecture=MSIL">
-      <HintPath>..\packages\ZooKeeperNetEx.3.4.9.4\lib\net45\ZooKeeperNetEx.dll</HintPath>
-      <Private>True</Private>
+    <Reference Include="Thrift.Test.Thrift">
+      <HintPath>..\Dependency\Thrift.Test.Thrift.dll</HintPath>
     </Reference>
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Common\BaseProcessor.cs" />
-    <Compile Include="Common\IpLimit.cs" />
-    <Compile Include="Common\PortHelper.cs" />
-    <Compile Include="Config\Service.cs" />
-    <Compile Include="Config\ServiceCollection.cs" />
-    <Compile Include="Config\ThriftConfigSection.cs" />
-    <Compile Include="ConfigCenter\ConfigCenter.cs" />
-    <Compile Include="ConfigCenter\RegeditConfig.cs" />
-    <Compile Include="Config\ZookeeperConfig.cs" />
-    <Compile Include="RealProxy.cs" />
-    <Compile Include="Server.cs" />
+    <Compile Include="CodeTimer.cs" />
+    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="ThriftLog.cs" />
-    <Compile Include="ZookeeperLog.cs" />
   </ItemGroup>
   <ItemGroup>
-    <None Include="packages.config" />
+    <None Include="App.config" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
