--- a/Thrift.ServiceWin/Config/ThriftServer.config
+++ b/Thrift.ServiceWin/Config/ThriftServer.config
@@ -25,8 +25,8 @@
          handlerType="Thrift.Service.TestServiceHandler,Thrift.Service.dll"
          spaceName="Thrift.Test.Thrift"
          className="ThriftTestThrift"
-         thriftAssembly="Thrift.Test.Thrift"
-         thriftImplAssembly="Thrift.Service"
+         thriftAssembly="Thrift.Test.Thrift.dll"
+         thriftImplAssembly="Thrift.Service.dll"
          port="9021" >
 
         <ZookeeperConfig
